  * Dh_Lib.pm: Emit "error" and "warning" with error and
    warning messages.  Thanks to Paul Wise for the
    suggestion.  (Closes: #906723)
  * Dh_Lib.pm: Support colored output for warnings and
    errors (enabled by default).  The colors can be
    controlled by setting DH_COLORS or DPKG_COLORS.  The
    latter will also affect dpkg-related tools.

  [ Helmut Grohne ]
  * Warn about missing perl-xs-dev for perl_* buildsystems.

 -- Niels Thykier <niels@thykier.net>  Wed, 15 Jan 2020 21:04:25 +0000

debhelper (12.7.3) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_perl: Use perl:any for perl module in addition to perl
    programs.  Thanks to Helmut Grohne and Niko Tyni for the
    suggestion and analysis.  (Closes: #946655)
  * dh_gencontrol: Clear the "Built-Using" flag for dbgsym
    packages.  It is irrelevant as the original binary will
    have the field plus the field can cause lintian warnings.
    (Closes: #947506)
  * lintian-overrides: Override no-dh-sequencer as it is a
    false-positive that lintian cannot be expected to know.

  [ Debian Janitor ]
  * Fix day-of-week for changelog entry 4.0.0.

 -- Niels Thykier <niels@thykier.net>  Sun, 29 Dec 2019 17:59:47 +0000

debhelper (12.7.2) unstable; urgency=medium

  [ Niels Thykier ]
  * dh: Skip conditional dh sequence addons in the clean target.
    This avoids FTBFS with conditional addons where the
    build-dependency is not satisfied.  (Closes: #944225)
  * meson.pm: Fix bug where dh_auto_test would break horribly
    under compat 13 due to an uninitialized variable.  Thanks to
    Benjamin Jacobs for reporting the issue.  (Closes: #945149)
  * dh_installman: Fix non-deterministic behaviour when there
    multiple definitions of the same manpage in a package.
    In compat 13, this is resolved by aborting with an error.
    In older compat levels, dh_installman will deterministically
    pick a canonical version (via sort) along with emitting a