@@ -34,6 +34,8 @@ debhelper (12.8) UNRELEASED; urgency=medium
     errors (enabled by default).  The colors can be
     controlled by setting DH_COLORS or DPKG_COLORS.  The
     latter will also affect dpkg-related tools.
+    Note: NO_COLOR is respected in the absence of
+    DH_COLORS and DPKG_COLORS.
 
   [ Helmut Grohne ]
   * Warn about missing perl-xs-dev for perl_* buildsystems.
